# clever_lama

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE.txt  README.md  analysis_report.md  build.sh  build_and_publish.sh  check.sh  cli.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  dockerhub.md  main.py  pyproject.toml  run_tests.sh
src/: config.py  logger.py  main.py
src/clever_lama/: __init__.py  config.py  constants.py  endpoints.py  logger.py  main.py  models.py  router.py  service.py  utils.py
src/clever_lama/models/: ollama.py
src/clever_lama/ports/api/ollama/: depends.py  endpoints.py  schemas.py
src/clever_lama/ports/spi/openai/: gateway.py
src/clever_lama/services/: proxy.py
src/ports/api/ollama/: depends.py  endpoints.py  schemas.py
src/ports/spi/openai/: gateway.py
src/services/: proxy.py
tests/: conftest.py  test_main.py
tests/clever_lama/: test_main.py
tests/clever_lama/models/: test_ollama.py
tests/clever_lama/ports/api/ollama/: test_depends.py  test_endpoints.py  test_schemas.py
tests/clever_lama/ports/spi/openai/: test_gateway.py
tests/clever_lama/services/: test_proxy.py
tests/models/: test_ollama.py
tests/ports/api/ollama/: test_depends.py  test_endpoints.py  test_schemas.py
tests/ports/spi/openai/: test_gateway.py
tests/services/: test_proxy.py
